--- a/index.html
+++ b/index.html
@@ -6,186 +6,193 @@
   <title>SRK's Temporary AI Chatbot</title>
   <style>
     * {
-  box-sizing: border-box;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
 
-body {
-  margin: 0;
-  background: linear-gradient(to right, #e3f2fd, #ffffff);
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
+    body {
+      margin: 0;
+      background: linear-gradient(to right, #e3f2fd, #ffffff);
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
 
-.header {
-  background: linear-gradient(90deg, #1a73e8, #5c6bc0);
-  color: white;
-  padding: 16px 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 18px;
-  font-weight: 600;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
+    .header {
+      background: linear-gradient(90deg, #1a73e8, #5c6bc0);
+      color: white;
+      padding: 12px 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 16px;
+      font-weight: 600;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
 
-.header button {
-  background: rgba(255, 255, 255, 0.15);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  color: white;
-  padding: 8px 14px;
-  font-size: 14px;
-  border-radius: 8px;
-  cursor: pointer;
-  backdrop-filter: blur(6px);
-  transition: all 0.3s ease;
-}
+    .header button {
+      background: rgba(255, 255, 255, 0.15);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      color: white;
+      padding: 6px 12px;
+      font-size: 13px;
+      border-radius: 6px;
+      cursor: pointer;
+      backdrop-filter: blur(6px);
+      transition: all 0.3s ease;
+    }
 
-.header button:hover {
-  background: rgba(255, 255, 255, 0.25);
-}
+    .header button:hover {
+      background: rgba(255, 255, 255, 0.25);
+    }
 
-.chat-wrapper {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  background: rgba(255, 255, 255, 0.7);
-  backdrop-filter: blur(8px);
-  overflow: hidden;
-}
+    .chat-wrapper {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.7);
+      backdrop-filter: blur(8px);
+      overflow: hidden;
+    }
 
-#chat-container {
-  flex: 1;
-  padding: 16px;
-  overflow-y: auto;
-  background: transparent;
-  display: flex;
-  flex-direction: column;
-}
+    #chat-container {
+      flex: 1;
+      padding: 12px;
+      overflow-y: auto;
+      background: transparent;
+      display: flex;
+      flex-direction: column;
+    }
 
-.user-message, .bot-message {
-  max-width: 85%;
-  padding: 12px 16px;
-  margin-bottom: 14px;
-  border-radius: 18px;
-  font-size: 14px;
-  line-height: 1.6;
-  white-space: pre-wrap;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-  animation: fadeIn 0.3s ease;
-}
+    .user-message, .bot-message {
+      max-width: 90%;
+      padding: 10px 14px;
+      margin-bottom: 10px;
+      border-radius: 16px;
+      font-size: 13px;
+      line-height: 1.5;
+      white-space: pre-wrap;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      animation: fadeIn 0.3s ease;
+    }
 
-.user-message {
-  align-self: flex-end;
-  background: linear-gradient(135deg, #d2e3fc, #bbdefb);
-  color: #0b3d91;
-  border-top-right-radius: 0;
-  margin-left: auto;
-}
+    .user-message {
+      align-self: flex-end;
+      background: linear-gradient(135deg, #d2e3fc, #bbdefb);
+      color: #0b3d91;
+      border-top-right-radius: 0;
+      margin-left: auto;
+    }
 
-.bot-message {
-  align-self: flex-start;
-  background: linear-gradient(135deg, #e8f0fe, #e3f2fd);
-  color: #202124;
-  border-top-left-radius: 0;
-  margin-right: auto;
-}
+    .bot-message {
+      align-self: flex-start;
+      background: linear-gradient(135deg, #e8f0fe, #e3f2fd);
+      color: #202124;
+      border-top-left-radius: 0;
+      margin-right: auto;
+    }
 
-#input-area {
-  display: flex;
-  padding: 14px 16px;
-  background-color: rgba(255,255,255,0.85);
-  border-top: 1px solid #ddd;
-  align-items: center;
-  backdrop-filter: blur(10px);
-}
+    #input-area {
+      display: flex;
+      padding: 10px 12px;
+      background-color: rgba(255,255,255,0.85);
+      border-top: 1px solid #ddd;
+      align-items: center;
+      backdrop-filter: blur(10px);
+    }
 
-#message-input {
-  flex: 1;
-  padding: 12px 16px;
-  font-size: 14px;
-  border: 1px solid #ccc;
-  border-radius: 30px;
-  outline: none;
-  background: #ffffff;
-  transition: border-color 0.3s ease;
-}
+    #message-input {
+      flex: 1;
+      padding: 10px 14px;
+      font-size: 13px;
+      border: 1px solid #ccc;
+      border-radius: 24px;
+      outline: none;
+      background: #ffffff;
+      transition: border-color 0.3s ease;
+    }
 
-#message-input:focus {
-  border-color: #1a73e8;
-}
+    #message-input:focus {
+      border-color: #1a73e8;
+    }
 
-#send-button {
-  background: #1a73e8;
-  border: none;
-  margin-left: 10px;
-  padding: 10px;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: transform 0.2s ease;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 44px;
-  min-height: 44px;
-}
+    #send-button {
+      background: #1a73e8;
+      border: none;
+      margin-left: 8px;
+      padding: 8px;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: transform 0.2s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 40px;
+      min-height: 40px;
+    }
 
-#send-button:hover {
-  transform: scale(1.1);
-}
+    #send-button:hover {
+      transform: scale(1.1);
+    }
 
-#send-button svg {
-  width: 20px;
-  height: 20px;
-  fill: white;
-  transform: rotate(-45deg);
-  display: block;
-}
+    #send-button svg {
+      width: 18px;
+      height: 18px;
+      fill: white;
+      transform: rotate(-45deg);
+      display: block;
+    }
 
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(10px); }
-  to { opacity: 1; transform: translateY(0); }
-}
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
 
-@media (max-width: 600px) {
-  .header {
-    padding: 14px 16px;
-    font-size: 16px;
-  }
+    @media (max-width: 480px) {
+      .header {
+        padding: 10px 12px;
+        font-size: 14px;
+      }
 
-  .header button {
-    font-size: 12px;
-    padding: 6px 10px;
-  }
+      .header button {
+        font-size: 11px;
+        padding: 5px 10px;
+      }
 
-  #chat-container {
-    padding: 12px;
-  }
+      #chat-container {
+        padding: 10px;
+      }
 
-  .user-message, .bot-message {
-    font-size: 13px;
-    margin-bottom: 12px;
-  }
+      .user-message, .bot-message {
+        font-size: 12px;
+        padding: 8px 12px;
+        margin-bottom: 8px;
+      }
 
-  #input-area {
-    padding: 12px;
-    flex-wrap: wrap;
-  }
+      #input-area {
+        padding: 10px;
+      }
 
-  #message-input {
-    font-size: 13px;
-  }
+      #message-input {
+        font-size: 12px;
+        padding: 8px 12px;
+      }
 
-  #send-button {
-    margin-left: 8px;
-  }
-}
+      #send-button {
+        min-width: 36px;
+        min-height: 36px;
+        margin-left: 6px;
+      }
 
+      #send-button svg {
+        width: 16px;
+        height: 16px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -199,17 +206,15 @@ body {
     <div id="chat-container">
       <div class="bot-message">Hey yo! What's up biiaaaaaaatch!
 Note:The chat is temporary  </div>
-
     </div>
 
     <div id="input-area">
       <input type="text" id="message-input" placeholder="Type your message..." />
       <button id="send-button">
-        <svg viewBox="0 0 24 24" style="transform: rotate(-45deg);">
+        <svg viewBox="0 0 24 24">
           <path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z" fill="white"/>
         </svg>
       </button>
-      
     </div>
   </div>
 
