--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     body {
       margin: 0;
       background: linear-gradient(to right, #e3f2fd, #ffffff);
-      height: 100vh;
+      height: 100dvh;
       display: flex;
       flex-direction: column;
+      overflow: hidden;
     }
 
     .header {
@@ -31,6 +32,7 @@
       position: sticky;
       top: 0;
       z-index: 10;
+      flex-shrink: 0;
     }
 
     .header button {
@@ -53,10 +55,9 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      height: 100%;
+      min-height: 0;
       background: rgba(255, 255, 255, 0.7);
       backdrop-filter: blur(8px);
-      overflow: hidden;
     }
 
     #chat-container {
@@ -66,6 +67,7 @@
       background: transparent;
       display: flex;
       flex-direction: column;
+      min-height: 0;
     }
 
     .user-message, .bot-message {
@@ -103,6 +105,7 @@
       border-top: 1px solid #ddd;
       align-items: center;
       backdrop-filter: blur(10px);
+      flex-shrink: 0;
     }
 
     #message-input {
@@ -205,7 +208,7 @@
   <div class="chat-wrapper">
     <div id="chat-container">
       <div class="bot-message">Hey yo! What's up biiaaaaaaatch!
-Note:The chat is temporary  </div>
+Note: The chat is temporary</div>
     </div>
 
     <div id="input-area">
@@ -223,7 +226,7 @@ Note:The chat is temporary  </div>
     const messageInput = document.getElementById('message-input');
     const sendButton = document.getElementById('send-button');
 
-    const apiKey = 'AIzaSyAsiFrxiMprij8p9sdQXlSBUZ8wF4c5krk'; // Replace with your provided key
+    const apiKey = 'AIzaSyAsiFrxiMprij8p9sdQXlSBUZ8wF4c5krk'; // Replace with your key
 
     sendButton.addEventListener('click', sendMessage);
     messageInput.addEventListener('keypress', function (event) {
@@ -233,7 +236,7 @@ Note:The chat is temporary  </div>
     });
 
     function startNewConversation() {
-      chatContainer.innerHTML = '<div class="bot-message">Hey yo! Whats up biiaaaaaaatch! \n Note:The chat is temporary  </div>';
+      chatContainer.innerHTML = '<div class="bot-message">Hey yo! What\'s up biiaaaaaaatch!\nNote: The chat is temporary</div>';
     }
 
     async function sendMessage() {
@@ -243,17 +246,20 @@ Note:The chat is temporary  </div>
         messageInput.value = '';
 
         try {
-          const response = await fetch('https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=' + apiKey, {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({
-              contents: [{
-                parts: [{ text: userMessageText }]
-              }]
-            })
-          });
+          const response = await fetch(
+            'https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=' + apiKey,
+            {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+              },
+              body: JSON.stringify({
+                contents: [{
+                  parts: [{ text: userMessageText }]
+                }]
+              })
+            }
+          );
 
           if (!response.ok) {
             const errorData = await response.json();
