--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     });
 
     function startNewConversation() {
-      chatContainer.innerHTML = '<div class="bot-message">Hey yo! What\'s up biiaaaaaaatch!<br>Note: The chat is temporary</div>';
+      chatContainer.innerHTML = '<div class="bot-message">Hey yo! What\'s up! How may I help you<br>Note: The chat is temporary</div>';
     }
 
     async function sendMessage() {
