--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
   <div class="chat-wrapper">
     <div id="chat-container">
-      <div class="bot-message">Hey yo! What's up biiaaaaaaatch!<br>Note: The chat is temporary</div>
+      <div class="bot-message">Hey yo! What's up!How may I help you.<br>Note: The chat is temporary</div>
     </div>
 
     <div id="input-area">
